--- a/src/components/Contact/contact-us.css
+++ b/src/components/Contact/contact-us.css
@@ -1,4 +1,3 @@
-
 .contact-us-bottom-container {
   position: relative;
   display: flex;
@@ -11,18 +10,18 @@
 }
 @media (max-width: 961px) {
   .contact-us-bottom-container {
-    padding: 35px 8%;
+    padding: 35px 0;
   }
 }
 @media (max-width: 700px) {
   .contact-us-bottom-container {
     flex-direction: column;
     padding: 0 8%;
+    align-items: center;
   }
 }
 @media (max-width: 481px) {
   .contact-us-bottom-container {
-    padding: 0 5.029%;
-    align-items: center;
+    padding: 0;
   }
 }
