--- a/src/components/Profile/account-password-form.css
+++ b/src/components/Profile/account-password-form.css
@@ -20,7 +20,7 @@
   font-size: 24px;
 }
 .account-form-email-input-field {
-  width: 100%;
+  width: calc(100% - 50px);
   height: 60px;
   padding: 0px 24px;
   border-radius: 16px;
@@ -28,7 +28,7 @@
   background: #fff;
 }
 .account-form-password-input-field {
-  width: 100%;
+  width: calc(100% - 50px);
   height: 60px;
   padding: 0px 24px;
   border-radius: 16px;
@@ -41,6 +41,8 @@
   margin-top: 24px;
 }
 .account-form-save-btn {
+  display: grid;
+  place-items: center;
   height: 50px;
   width: 186px;
   padding: 16px 24px;
