--- a/src/components/SingleVIdeo/Desc/desc.css
+++ b/src/components/SingleVIdeo/Desc/desc.css
@@ -2,7 +2,7 @@
     /* width: 1440px; */
     height: 327px;
     display: grid;
-    place-items: center;
+    /* place-items: center; */
     padding: 0 0 0 130px;
     justify-content: start;
     margin: 0 0 30px 0;
