--- a/src/components/SingleVIdeo/Requirement/requirement.css
+++ b/src/components/SingleVIdeo/Requirement/requirement.css
@@ -2,12 +2,12 @@
     /* width: 1440px; */
     height: 310px;
     display: grid;
-    place-items: center;
+    /* place-items: center; */
     padding: 0 0 0 130px;
     justify-content: start;
   }
   .requirement-container-content {
-    width: 768px;
+    /* width: 768px;
     height: 287px;
     border-radius: 40px;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -16,6 +16,16 @@
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06),
       0px 0px 4px 0px rgba(0, 0, 0, 0.04);
     padding:0px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; */
+    width: 59%;
+    height: 287px;
+    border-radius: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06), 0px 0px 4px 0px rgba(0, 0, 0, 0.04);
+    padding: 0px 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
