--- a/src/components/SingleVIdeo/WhatYouGet/swhatyouget.css
+++ b/src/components/SingleVIdeo/WhatYouGet/swhatyouget.css
@@ -2,12 +2,12 @@
   /* width: 1440px; */
   height: 327px;
   display: grid;
-  place-items: center;
+  /* place-items: center; */
   padding: 0 0 0 130px;
   justify-content: start;
 }
 .swhat-container-content {
-  width: 768px;
+  width: 59%;
   height: 287px;
   border-radius: 40px;
   border: 1px solid rgba(0, 0, 0, 0.1);
