--- a/src/components/SingleVIdeo/Who/who.css
+++ b/src/components/SingleVIdeo/Who/who.css
@@ -1,21 +1,20 @@
 .who-container {
     /* width: 1440px; */
-    height: 220px;
+    height: auto;
     display: grid;
-    place-items: center;
+    /* place-items: center; */
     padding: 0 0 0 130px;
     justify-content: start;
+    margin: 10px 0;
   }
   .who-container-content {
-    width: 768px;
-    height: 170px;
+    width: 59%;
+    height: 287px;
     border-radius: 40px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.9);
-  
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06),
-      0px 0px 4px 0px rgba(0, 0, 0, 0.04);
-    padding:0px 30px;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06), 0px 0px 4px 0px rgba(0, 0, 0, 0.04);
+    padding: 0px 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
