--- a/src/components/Helpers/courses.css
+++ b/src/components/Helpers/courses.css
@@ -1,48 +1,90 @@
-.courses-container{
-    width: 1440px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 30px 0;
+.courses-container {
+  width: 100%;
+  max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
 }
 
-.courses-container-nav{
-    display: flex;
-    gap: 120px;
+.courses-container-nav {
+  display: flex;
+  gap: 10%;
+  justify-content: center;
 
-   
-    font-family: Raleway;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 160%;
-    cursor: pointer;
+  font-family: Raleway;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%;
+  cursor: pointer;
+  width: 100%;
 }
 
-.courses-container-nav-item-active{
-    color: var(--orange, #F66E24);
+.courses-container-nav-item-active {
+  color: var(--orange, #f66e24);
 }
 
-.courses-container-nav-line{
-    width: 886px;
-    height: 2px;
-    background: rgba(0, 0, 0, 0.10);
-    margin-top: 20px;
+.courses-container-nav-line {
+  width: 90%;
+  height: 2px;
+  background: rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
 }
-.courses-container-nav-line-active{
-    
-    height: 5px;
+.courses-container-nav-line-active {
+  height: 5px;
+  width: 100px;
+  background: var(--orange, #f66e24);
+  position: relative;
+  bottom: 3px;
+  border-radius: 2px;
+  /* right: 260px; */
+  transition: 0.2s linear;
+}
+.coursesVideo {
+  display: flex;
+  gap: 20px;
+  margin: 50px 0;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.courses-container-nav-item{
+    text-align: center;
     width: 100px;
-    background: var(--orange, #F66E24);
-    position: relative;
-    bottom: 3px;
-    border-radius: 2px;
-    /* right: 260px; */
-    transition: 0.2s linear;
+    overflow-x: hidden;
 }
-.coursesVideo{
-    display: flex;
-    gap: 20px;
-    margin: 50px 0;
+.courses-container-nav-item-active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5px;
+
+  background: var(--orange, #f66e24);
+  position: relative;
+  bottom: 3px;
+  border-radius: 2px;
+  /* right: 260px;left: 0; */
+  transition: 0.2s linear;
+  position: relative;
+  animation: shift 0.3s linear;
+}
+
+@keyframes shift {
+    from{
+        left: -83px;
+    }
+    to{
+        left: 0px;
+    }
+}
+@media screen and (max-width: 675px) {
+    .courses-container-nav-item{
+        width: 19%;
+    }
+}
+@media screen and (max-width: 450px) {
+    .courses-container-nav-item{
+        width: auto;
+    }
 }
