--- a/src/components/Helpers/videoBox.css
+++ b/src/components/Helpers/videoBox.css
@@ -10,10 +10,11 @@
   }
   .VideoBox-container-thumbnail{
       position: relative;
+      width: 100%;
   }
   .VideoBox-container-thumbnail img {
     object-fit: cover;
-    width: 373px;
+    width: 100%;
     height: 217px;
     border-radius: 12px 12px 0px 0px;
     filter: brightness(50%);
@@ -105,4 +106,27 @@ font-weight: 700; */
 /* line-height: normal; */
 text-decoration-line: underline;
 cursor: pointer;
+  }
+.startLearning{
+  width: 186px;
+    height: 50px;
+}
+  @media screen and (max-width: 780px) {
+    .VideoBox-container{
+      width: 40%;
+    }
+
+    .startLearning{
+      width: 140px;
+    }
+
+  }
+  @media screen and (max-width: 500px) {
+    .VideoBox-container{
+      width: 80%;
+    }
+    .startLearning{
+      width: 130px;
+      height: 40px;
+    }
   }
