--- a/src/components/SingleVIdeo/Desc/desc.css
+++ b/src/components/SingleVIdeo/Desc/desc.css
@@ -1,55 +1,55 @@
 .desc-container {
-    /* width: 1440px; */
-    height: 327px;
-    display: grid;
-    /* place-items: center; */
-    padding: 0 0 0 130px;
-    justify-content: start;
-    margin: 0 0 30px 0;
-  }
-  .desc-container-content {
-    width: 768px;
-    height: 317px;
-    border-radius: 40px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background: rgba(255, 255, 255, 0.9);
+  /* width: 1440px; */
+  height: auto;
+  /* display: grid; */
+  /* place-items: center; */
+  /* padding: 0 0 0 130px; */
+  /* justify-content: start; */
+  /* margin: 0 0 30px 0; */
+  width: 100%;
+}
+.desc-container-content {
+  width: calc(100% - 60px);
+  height: auto;
+  border-radius: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.9);
   text-align: justify;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06),
-      0px 0px 4px 0px rgba(0, 0, 0, 0.04);
-    padding:0px 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .desc-container-content-title {
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 32px;
-    font-family: Raleway;
-    font-weight: 600;
-    margin: 12px 0;
-  }
-  .desc-container-content-points {
-    margin: 24px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    gap: 24px;
-  }
-  .desc-container-content-points-icon {
-    color: #008000;
-    font-size: 25px;
-  }
-  .desc-container-content-points-point {
-    /* width: 324px; */
-    height: auto;
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 16px;
-    font-family: Raleway;
-    font-weight: 500;
-    line-height: 160%;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
-  
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06),
+    0px 0px 4px 0px rgba(0, 0, 0, 0.04);
+  padding: 0px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.desc-container-content-title {
+  color: rgba(0, 0, 0, 0.9);
+  font-size: 32px;
+  font-family: Raleway;
+  font-weight: 600;
+  margin: 12px 0;
+}
+.desc-container-content-points {
+  margin: 24px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 24px;
+}
+.desc-container-content-points-icon {
+  color: #008000;
+  font-size: 25px;
+}
+.desc-container-content-points-point {
+  /* width: 324px; */
+  height: auto;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 16px;
+  font-family: Raleway;
+  font-weight: 500;
+  line-height: 160%;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
