--- a/src/components/SingleVIdeo/Requirement/requirement.css
+++ b/src/components/SingleVIdeo/Requirement/requirement.css
@@ -1,10 +1,12 @@
 .requirement-container {
     /* width: 1440px; */
-    height: 310px;
-    display: grid;
+    height: auto;
+    /* display: grid; */
     /* place-items: center; */
-    padding: 0 0 0 130px;
-    justify-content: start;
+    /* padding: 0 0 0 130px; */
+    /* justify-content: start; */
+    width: 100%;
+    position: relative;
   }
   .requirement-container-content {
     /* width: 768px;
@@ -19,9 +21,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center; */
-    width: 59%;
-    height: 287px;
-    border-radius: 40px;
+    width: calc(100% - 60px);
+    height: auto;
+    border-radius: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06), 0px 0px 4px 0px rgba(0, 0, 0, 0.04);
