--- a/src/components/SingleVIdeo/WhatYouGet/swhatyouget.css
+++ b/src/components/SingleVIdeo/WhatYouGet/swhatyouget.css
@@ -1,15 +1,17 @@
 .swhat-container {
+  position: relative;
   /* width: 1440px; */
-  height: 327px;
-  display: grid;
+  height: auto;
+  /* display: grid; */
   /* place-items: center; */
-  padding: 0 0 0 130px;
-  justify-content: start;
+  /* padding: 0 0 0 130px; */
+  /* justify-content: start; */
+  width: 100%;
 }
 .swhat-container-content {
-  width: 59%;
-  height: 287px;
-  border-radius: 40px;
+  width: calc(100% - 60px);
+  height: auto;
+  border-radius: 20px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: rgba(255, 255, 255, 0.9);
 
