--- a/src/components/SingleVIdeo/Who/who.css
+++ b/src/components/SingleVIdeo/Who/who.css
@@ -1,16 +1,17 @@
 .who-container {
     /* width: 1440px; */
     height: auto;
-    display: grid;
+    /* display: grid; */
     /* place-items: center; */
-    padding: 0 0 0 130px;
-    justify-content: start;
-    margin: 10px 0;
+    /* padding: 0 0 0 130px; */
+    /* justify-content: start; */
+    /* margin: 10px 0; */
+    width: 100%;
   }
   .who-container-content {
-    width: 59%;
-    height: 287px;
-    border-radius: 40px;
+    width:calc(100% - 60px);
+    height: auto;
+    border-radius: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06), 0px 0px 4px 0px rgba(0, 0, 0, 0.04);
