--- a/src/components/VideoPlayer/AboutThisCourse/aboutthiscourse.css
+++ b/src/components/VideoPlayer/AboutThisCourse/aboutthiscourse.css
@@ -1,16 +1,17 @@
 .aboutThisCourse-container {
     /* width: 1441px; */
+    width: 100%;
     height: auto;
-    display: grid;
-    place-items: center;
-    padding: 0 0 0 130px;
-    justify-content: start;
-    margin: 30px 0;
+    /* display: grid;
+    place-items: center; */
+    /* padding: 0 0 0 130px; */
+    /* justify-content: start; */
+    /* margin: 30px 0; */
   }
   .aboutThisCourse-container-content {
-    width: 768px;
+    width: calc(100% - 60px);
     height: auto;
-    border-radius: 40px;
+    border-radius: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.9);
   
