--- a/src/components/VideoPlayer/playerDesc/playerDesc.css
+++ b/src/components/VideoPlayer/playerDesc/playerDesc.css
@@ -1,22 +1,23 @@
 .playerDesc-container {
-    /* width: 1441px; */
-    height: 327px;
-    display: grid;
-    place-items: center;
-    padding: 0 0 0 130px;
-    justify-content: start;
-    margin: 55px 0;
+   /* width: 1441px; */
+   width: 100%;
+   height: auto;
+   /* display: grid;
+   place-items: center; */
+   /* padding: 0 0 0 130px; */
+   /* justify-content: start; */
+   /* margin: 30px 0; */
   }
   .playerDesc-container-content {
-    width: 768px;
-    height: 317px;
-    border-radius: 40px;
+    width: calc(100% - 60px);
+    height: auto;
+    border-radius: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: rgba(255, 255, 255, 0.9);
-  text-align: justify;
+  
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06),
       0px 0px 4px 0px rgba(0, 0, 0, 0.04);
-    padding:0px 30px;
+    padding:20px 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,7 +49,7 @@
     font-weight: 500;
     line-height: 160%;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 10px;
   }
   
