--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+:root{
+  --blue: #01acf1;
+  --green: #89c11f;
+  --orange: #f66e24;
+}
 * {
   margin: 0;
   padding: 0;
@@ -60,6 +65,7 @@ a{
   width: 100%;
   height: 640px;
   /* margin: 100px 0; */
+  margin-bottom: 20px;
 }
 
 .pricing-table-container {
@@ -68,7 +74,7 @@ a{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 50px 0;
+  margin: 100px 0;
 }
 .pricing-table-heading {
   width: 739px;
@@ -80,9 +86,13 @@ a{
   font-size: 64px;
   line-height: 75px;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
-
+.pricing-table-heading span{
+color: var(--orange);
+font-weight: 600;
+font-size: 80px;
+}
 .pricing-table-pointing-up-arrow {
   position: relative;
   /* position: absolute; */
@@ -129,4 +139,21 @@ a{
   height: auto;
   /* padding: 0 0 0 130px; */
   margin: 20px 0 0 0 ;
+}
+
+.main-profile-container{
+  width: 100%;
+}
+.Profile-bio-heading{
+  width: 100%;
+}
+.Profile-bio-heading p{
+  margin: 0 12%;
+  font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+line-height: 38px;
+letter-spacing: 0em;
+text-align: left;
+
 }
