--- a/src/components/SingleVIdeo/SingleVideo.css
+++ b/src/components/SingleVIdeo/SingleVideo.css
@@ -16,6 +16,7 @@
   font-weight: 600;
   line-height: 120%;
   letter-spacing: 0.72px;
+  margin-bottom: 16px;
 }
 .singleTop-container-left-description {
   color: rgba(0, 0, 0, 0.7);
@@ -23,7 +24,12 @@
   font-family: Raleway;
   line-height: 160%;
   letter-spacing: 0.24px;
-  margin: 12px 0;
+  margin: 16px 0;
+}
+.singlePage-startBtn{
+  margin: 24px 0;
+  width: 156px;
+  height: 48px;
 }
 .singleTop-container-left-instrutor {
   display: flex;
@@ -198,6 +204,7 @@
   }
   .singleTop-container-left-title {
     font-size: 36px;
+    
   }
   .singleTop-sticky {
     width: 45%;
