--- a/src/App.css
+++ b/src/App.css
@@ -157,3 +157,13 @@ letter-spacing: 0em;
 text-align: left;
 
 }
+
+.blogSection{
+  width: 100%;
+  height: auto;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
